--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="FA_COUL_TECH.jpg" alt="Logo FA_COUL_TECH">
+            <img src="image/FA_COUL_TECH.jpg" alt="Logo FA_COUL_TECH">
         </div><fieldset>
         <h1> Maintenance Informatique Chez FA_COUL_TECH</h1></fieldset>
         <p style="text-align: center;"><b><i>Votre expert en solutions informatiques à portée de main !!!!!</i></b></p>
@@ -88,7 +88,7 @@
             <li>Diagnostic et réparation de cartes mères, ou remplacement si nécessaire</li>
         </ul>
         <div class="image-section">
-            <img src="Technicien.jpg" alt="Technicien FA_COUL_TECH réparant un ordinateur">
+            <img src="image/Technicien.jpg" alt="Technicien FA_COUL_TECH réparant un ordinateur">
         </div>
 
         <h2><u><b>Maintenance Logiciel :</b></u></h2>
@@ -105,7 +105,7 @@
         </ul>
         </ul>
         <div class="image-section">
-            <img src="Informatique.jpg" alt="Technicien FA_COUL_TECH analysant un logiciel">
+            <img src="image/Informatique.jpg" alt="Technicien FA_COUL_TECH analysant un logiciel">
         </div>
 
         <h2><u><b>Pourquoi choisir FA_COUL_TECH ?</b></u></h2>
